+ NT@MC-QTM: gcd and lcm

--- a/math/talks/env-talks.tex
+++ b/math/talks/env-talks.tex
@@ -72,6 +72,7 @@
 \definehighlight [bad] [color=orangered]
 \definehighlight [ugly] [color=lightred]
 \definehighlight [important] [color=darkblue]
+\definehighlight [soln] [color=\getvariable{document}{color-solution}]
 
 % Emoji
 \def \smile{\symbol[fontawesome][smile]}
@@ -257,6 +258,7 @@
 	style=normal,
 	before=,
 	after=,
+	color=\getvariable{document}{color-solution},
 	closesymbol={□}]
 
 
