--- a/math/bibliographies/number-theory.bib
+++ b/math/bibliographies/number-theory.bib
@@ -9,8 +9,7 @@
 	number="1",
 	pages="2--2",
 	issn="1866-7414",
-	doi="10.1007/s00283-012-9322-z",
-	url="https://doi.org/10.1007/s00283-012-9322-z"}
+	doi="10.1007/s00283-012-9322-z"}
 
 @Article{HardyWoodgold2009,
 	author="Hardy, Michael
@@ -24,6 +23,13 @@
 	number="4",
 	pages="44",
 	issn="1866-7414",
-	doi="10.1007/s00283-009-9064-8",
-	url="https://doi.org/10.1007/s00283-009-9064-8"}
+	doi="10.1007/s00283-009-9064-8"}
 
+@article{AgrawalKayalSaxena2004,
+	author = {Agrawal, Manindra and Kayal, Neeraj and Saxena, Nitin},
+	title = {PRIMES is in P},
+	year = 2004,
+	volume = 160,
+	issue = 2,
+	pages = {781–793},
+	doi={10.4007/annals.2004.160.781}}
